--- a/TshirtStore.Api/wwwroot/Admin/public/dev/pages/shared/headbar.html
+++ b/TshirtStore.Api/wwwroot/Admin/public/dev/pages/shared/headbar.html
@@ -13,7 +13,11 @@
         <!-- collapse o item pode ser retraido oou não -->
         <div class="navbar-collapse collapse" id="header-menu">
             <ul class="nav navbar-nav">
-                <li><a href="#">Content</a></li>
+                <li><a href="#/">Home</a></li>
+                <li><a href="#/usuarios">Usuários</a></li>
+                <li><a href="#/categorias">Categorias</a></li>
+                <li><a href="#/produtos">Produto</a></li>
+                <li><a href="#/pedido">Pedidos</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/"><em>Jorge Dantas</em></a> </li>
